Respecting line breaks in definition example. Fixes #29

--- a/public/styles/merged-style.css
+++ b/public/styles/merged-style.css
@@ -631,6 +631,7 @@ button {
     font-family: 'PT Sans';
     font-weight: 400;
     font-size: 1.25rem;
+    white-space: pre-wrap;
 }
 .my-card-description,
 .card-description {
